<resources>
    <string name="app_name">Police Tracking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="firstName">First Name</string>
    <string name="fatherName">Father Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="cnic">CNIC</string>
    <string name="location">Location</string>
    <string name="branch">Branch</string>
    <string name="buckleWithRank">Buckle with rank</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title">Animal Sounds</string>
    <string name="dog_pic">Image of a dog</string>
    <string name="cat_pic">Image of a cat</string>
    <string name="pig_pic">Image of a pig</string>
    <string name="fox_pic">Image of a fox</string>
</resources>