<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login Screen"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/dogButton"
            android:layout_width="143dp"
            android:layout_height="131dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/dog_pic"
            android:onClick="sendMessage"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@+id/catButton"
            app:layout_constraintEnd_toStartOf="@+id/catButton"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <ImageButton
            android:id="@+id/catButton"
            android:layout_width="143dp"
            android:layout_height="131dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/cat_pic"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background"
            android:onClick="sendMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pigButton"
            android:layout_width="143dp"
            android:layout_height="131dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pig_pic"
            android:src="@drawable/ic_launcher_background"
            android:onClick="sendMessage"
            app:layout_constraintBottom_toBottomOf="@+id/foxButton"
            app:layout_constraintEnd_toStartOf="@+id/foxButton"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dogButton"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/foxButton"
            android:layout_width="143dp"
            android:layout_height="131dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="28dp"
            android:onClick="sendMessage"
            android:scaleType="fitCenter"
            android:contentDescription="@string/fox_pic"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/catButton" />

        <TextView
            android:id="@+id/animalSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/content_signup" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
